Fix merger conflict

--- a/hello.html
+++ b/hello.html
@@ -4,11 +4,7 @@
         <title>Hello</title>
     </head>
     <body>
-<<<<<<< HEAD
-        <h1>Welcome to my Website!!</h1>
-=======
-        <h1 style="color:blue;">Welcome to my Website!</h1>
->>>>>>> d64473f746960e052d2f591bbd02498176a80f4f
+        <h1 style="color:blue;">Welcome to my Website!!</h1>
         <h2>Hello</h2>
         Hello, World!
     </body>
